--- a/src/main/resources/templates/alert2.html
+++ b/src/main/resources/templates/alert2.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://api.class-connect.kr/api/alert2.html">
+    <meta http-equiv="refresh" content="0; url=https://api.class-connect.kr/api/v2/alert2.html">
     <title>Alert</title>
     <script type="text/javascript">
         alert("[[${message}]]");
